# SeverinEngine

./: .gitmodules  CMakeLists.txt
runtime/include/: clock.hpp  event_system.hpp  game_renderer.hpp  game_window.hpp  keyboard.hpp  logging.hpp
runtime/shaders/: generics.h  triangle.metal
runtime/src/: logging.cpp
tests/: main.cpp
